fixed bug where search-bar did not properly adjust with media queries (forgot to put id attribute on input tag on other pages); changed when search bar jumps down (735px now);

--- a/css/media.css
+++ b/css/media.css
@@ -6,7 +6,9 @@
   }
 
   #container form {
+
   }
+  
   #container form section { /* Align vertically */
     display: block;
     float: none;
@@ -29,7 +31,7 @@
   }
 }
 
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 735px) {
   nav ul{ /* search-bar is now positioned underneath nav items */
       position: relative;
       text-align: center;
@@ -68,7 +70,7 @@
 }
 
 @media screen and (max-width: 640px) {
-  p {
+  article {
     display: block;
   }
   body {
