--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     -webkit-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;
+    height: 100%
 }
 
 header{
